--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,6 +4,7 @@ body {
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
 		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	border: #ff9900 0.25rem solid;
 }
 
 a {
