--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -1,6 +1,10 @@
 // Colours Variables
 $baseColor_white: #fff;
 $baseColor_black: #111;
+$baseColor_lightGrey: #d5d5d5;
+$baseColor_lightGrey2: #d3d3d3;
+$baseColor_lightGrey3: #b3b3b3;
+$baseColor_lightBlack: #686868;
 $baseColor_lightBlack: #292929;
 
 // Background Colours
