--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -16,52 +16,91 @@
 		padding: 0.5rem 0;
 
 		nav {
-			display: flex;
 			padding: 0 1rem;
 			align-items: center;
-			justify-content: space-between;
 
-			.navTitle {
-				h2 {
-					color: $baseColor_black;
-					font-size: $fontSize_large;
-					font-family: $fontStyle_header;
-				}
-			}
-
-			.navLinks {
-				padding: 0;
-				margin: auto;
+			.topSection {
 				display: flex;
 				justify-content: space-between;
 
-				li {
-					padding: 10px;
-					list-style: none;
+				.leftSide,
+				.rightSide {
+					display: flex;
+
+					.borderDiv {
+						margin: auto 0.5rem;
+						height: 1.25rem;
+						border-right: $baseColor_lightGrey2 0.1rem solid;
+					}
 
 					a {
+						padding: 10px;
 						text-decoration: none;
+						font-size: $fontSize_small;
+						color: $baseColor_lightGrey3;
+						font-family: $fontStyle_option3;
+					}
+
+					a:hover {
+						color: $baseColor_black;
+					}
+				}
+			}
+
+			.borderLineMid {
+				margin: 1rem 0;
+				border-bottom: $baseColor_lightGrey2 0.1rem solid;
+			}
+
+			.bottomSection {
+				display: flex;
+				align-items: center;
+				justify-content: space-between;
+
+				.navTitle {
+					h2 {
+						margin: 0 auto;
 						color: $baseColor_black;
 						font-size: $fontSize_large;
+						font-family: $fontStyle_header;
+					}
+				}
+
+				.navLinks {
+					padding: 0rem;
+					margin: 0 auto;
+					display: flex;
+					justify-content: space-between;
+
+					li {
+						list-style: none;
+
+						a {
+							padding: 0px 10px;
+							margin: 0 auto;
+							text-decoration: none;
+							color: $baseColor_black;
+							font-size: $fontSize_large;
+							font-family: $fontStyle_header;
+						}
+
+						a:hover {
+							color: $baseColor_lightGrey3;
+						}
+					}
+				}
+
+				.navCheckout {
+					a {
+						padding: 10px;
+						color: $baseColor_black;
+						font-size: $fontSize_normal;
 						font-family: $fontStyle_header;
 					}
 
 					a:hover {
 						color: $baseColor_lightGrey3;
 					}
-				}
-			}
-
-			.navCheckout {
-				a {
-					padding: 10px;
-					color: $baseColor_black;
-					font-size: $fontSize_normal;
-					font-family: $fontStyle_header;
-				}
-
-				a:hover {
-					color: $baseColor_lightGrey3;
 				}
 			}
 		}
