Updated the footer.

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -125,8 +125,8 @@
 			margin-top: 1rem;
 			text-align: center;
 			color: $baseColor_black;
-			font-size: $fontSize_large;
-			font-family: $fontStyle_option1;
+			font-size: $fontSize_normal;
+			font-family: $fontStyle_option4;
 		}
 	}
 }
