--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -4,6 +4,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Heebo:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Assistant:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
 
 // Font Stack Properties
 $fontStyle_header: "Bebas Neue", cursive;
@@ -11,6 +12,7 @@ $fontStyle_body: "Rubik", sans-serif;
 $fontStyle_option1: "Heebo", cursive;
 $fontStyle_option2: "Fjalla One", sans-serif;
 $fontStyle_option3: "Assistant", sans-serif;
+$fontStyle_option4: "Inter", sans-serif;
 
 // Font Sizes
 $fontSize_xSmall: 0.75rem;
