--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -133,13 +133,60 @@
 }
 
 .footer {
-	display: flex;
-	flex: 1;
-	padding: 2rem 0;
-	border-top: 1px solid #eaeaea;
-	justify-content: center;
-	align-items: center;
+	padding: 2rem;
 	background-color: $backgroundColor_black;
+
+	.bottomSection {
+		.topHalfSection {
+			display: flex;
+			justify-content: right;
+
+			a {
+				padding: 10px;
+				text-decoration: none;
+				font-size: $fontSize_xSmall;
+				color: $baseColor_lightGrey4;
+				font-family: $fontStyle_option3;
+			}
+
+			a:hover {
+				color: $baseColor_white;
+			}
+		}
+
+		.bottomHalfSection {
+			display: flex;
+			justify-content: space-between;
+
+			.leftSide,
+			.rightSide {
+				display: flex;
+
+				a {
+					padding: 10px;
+					text-decoration: none;
+					font-size: $fontSize_xSmall;
+					color: $baseColor_lightGrey4;
+					font-family: $fontStyle_option3;
+				}
+			}
+
+			.leftSide {
+				.location {
+					color: $baseColor_white;
+
+					i {
+						margin-right: 1rem;
+					}
+				}
+			}
+			.rightSide {
+				a:hover {
+					color: $baseColor_white;
+				}
+			}
+		}
+	}
 }
 
 @media (max-width: 600px) {
