Updated the scss footer styling.

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -188,6 +188,10 @@
 						font-size: $fontSize_normal;
 						font-family: $fontStyle_header;
 					}
+
+					a:hover {
+						color: $baseColor_lightGrey2;
+					}
 				}
 			}
 
