--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -130,6 +130,48 @@
 			font-family: $fontStyle_option4;
 		}
 	}
+
+	// <========== POPULAR ==========>
+	.popular {
+		margin-top: 5rem;
+		padding: 2rem;
+
+		h2 {
+			font-weight: 900;
+			color: $baseColor_black;
+			font-size: $fontSize_large;
+			font-family: $fontStyle_option4;
+		}
+
+		.desciption {
+			padding: 2rem 0;
+
+			.productDisplay {
+				display: flex;
+				justify-content: space-between;
+
+				.productItem {
+					display: flex;
+					justify-content: space-between;
+
+					a {
+						font-weight: 100;
+						text-decoration: none;
+						color: $baseColor_black;
+						font-size: $fontSize_normal;
+						font-family: $fontStyle_body;
+					}
+				}
+
+				.productCategoty {
+					font-weight: 100;
+					font-size: $fontSize_normal;
+					color: $baseColor_lightGrey3;
+					font-family: $fontStyle_body;
+				}
+			}
+		}
+	}
 }
 
 // <========== FOOTER ==========>
