--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -143,31 +143,29 @@
 			font-family: $fontStyle_option4;
 		}
 
-		.desciption {
-			padding: 2rem 0;
+		.productDisplay {
+			display: flex;
+			justify-content: space-between;
 
-			.productDisplay {
+			.productItem {
 				display: flex;
 				justify-content: space-between;
 
-				.productItem {
+				.description {
 					display: flex;
-					justify-content: space-between;
+					flex-direction: column;
 
-					a {
-						font-weight: 100;
-						text-decoration: none;
-						color: $baseColor_black;
-						font-size: $fontSize_normal;
-						font-family: $fontStyle_body;
+					.topSection {
+						display: flex;
+						justify-content: space-between;
+
+						a {
+							text-decoration: none;
+							color: $baseColor_black;
+							font-size: $fontSize_large;
+							font-family: $fontStyle_option4;
+						}
 					}
-				}
-
-				.productCategoty {
-					font-weight: 100;
-					font-size: $fontSize_normal;
-					color: $baseColor_lightGrey3;
-					font-family: $fontStyle_body;
 				}
 			}
 		}
