--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -216,6 +216,38 @@
 			grid-gap: 1rem;
 
 			.productDisplay {
+				.content {
+					bottom: 150px;
+					display: flex;
+					padding: 1rem;
+					position: relative;
+					width: fit-content;
+					margin-left: 1.5rem;
+					flex-direction: column;
+
+					h2 {
+						color: $baseColor_white;
+						font-size: $fontSize_normal;
+						font-family: $fontStyle_option4;
+					}
+					.shopButton {
+						width: fit-content;
+						padding: 0.5rem 2rem;
+						border-radius: 50px;
+						background-color: $backgroundColor_White;
+
+						a {
+							text-decoration: none;
+							color: $baseColor_black;
+							font-size: $fontSize_normal;
+							font-family: $fontStyle_option4;
+						}
+
+						a:hover {
+							color: $baseColor_lightGrey3;
+						}
+					}
+				}
 			}
 		}
 	}
