Created a trending display and edited the content and styling.

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -197,8 +197,8 @@
 		}
 	}
 
-	// <========== POPULAR ==========>
-	.shoeSet {
+	// <========== COSY SETS ==========>
+	.cosySet {
 		padding: 2rem;
 		margin-top: 2.5rem;
 
@@ -246,6 +246,72 @@
 						a:hover {
 							color: $baseColor_lightGrey3;
 						}
+					}
+				}
+			}
+		}
+	}
+
+	// <========== TRENDING NOW ==========>
+	.trendingNow {
+		padding: 2rem;
+		margin-top: 2.5rem;
+
+		h2 {
+			font-weight: 400;
+			color: $baseColor_black;
+			font-size: $fontSize_large;
+			font-family: $fontStyle_option4;
+		}
+
+		.productDisplay {
+			display: grid;
+			padding: 1rem 0;
+			grid-template-columns: repeat(3, 1fr);
+			grid-gap: 1rem;
+			justify-content: space-between;
+
+			.productItem {
+				display: flex;
+				flex-direction: column;
+				justify-content: space-between;
+
+				a {
+					text-decoration: none;
+
+					img {
+						width: 100%;
+						height: 400px;
+						object-fit: contain;
+					}
+				}
+
+				.description {
+					display: flex;
+					padding: 1rem 0;
+					flex-direction: column;
+
+					.topSection {
+						display: flex;
+						justify-content: space-between;
+
+						a,
+						h2 {
+							margin: auto 0;
+							font-weight: 100;
+							text-decoration: none;
+							color: $baseColor_black;
+							font-size: $fontSize_normal;
+							font-family: $fontStyle_option4;
+						}
+					}
+
+					a {
+						font-weight: 100;
+						text-decoration: none;
+						color: $baseColor_lightGrey3;
+						font-size: $fontSize_small;
+						font-family: $fontStyle_option4;
 					}
 				}
 			}
