--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -317,6 +317,62 @@
 			}
 		}
 	}
+
+	// <========== MORE BLUE OPTIONS ==========>
+	.moreProducts {
+		padding: 2rem;
+		margin-top: 2.5rem;
+
+		h2 {
+			font-weight: 400;
+			color: $baseColor_black;
+			font-size: $fontSize_large;
+			font-family: $fontStyle_option4;
+		}
+
+		.contentDisplay {
+			display: grid;
+			padding: 1rem 0;
+			grid-template-columns: repeat(3, 1fr);
+			grid-gap: 1rem;
+			justify-content: space-between;
+
+			.productDisplay {
+				.content {
+					bottom: 75px;
+					display: flex;
+					padding: 1rem;
+					position: relative;
+					width: fit-content;
+					margin-left: 1rem;
+					flex-direction: column;
+
+					h2 {
+						color: $baseColor_white;
+						font-size: $fontSize_normal;
+						font-family: $fontStyle_option4;
+					}
+					.shopButton {
+						width: fit-content;
+						padding: 0.5rem 2rem;
+						border-radius: 50px;
+						background-color: $backgroundColor_White;
+
+						a {
+							text-decoration: none;
+							color: $baseColor_black;
+							font-size: $fontSize_normal;
+							font-family: $fontStyle_option4;
+						}
+
+						a:hover {
+							color: $baseColor_lightGrey3;
+						}
+					}
+				}
+			}
+		}
+	}
 }
 
 // <========== FOOTER ==========>
