Created a 50% Sales section.

--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -17,6 +17,7 @@ $secondary_yellow: #fbcf40;
 $secondary_orange: #fbb040;
 $secondary_Purple: #8a59fd;
 $secondary_pinkRed: #ff0055;
+$secondary_fadedPink: #ff8fb4;
 $secondary_whiteDouble: rgba(255, 255, 255, 0.795);
 $secondary_whiteDouble2: rgba(255, 255, 255, 0.83);
 
