--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -252,6 +252,31 @@
 		}
 	}
 
+	// <========== 50% SALE ==========>
+	.saleFiftyPercent {
+		width: 100%;
+		padding: 2rem;
+		background-color: $secondary_fadedPink;
+
+		.content {
+			text-align: center;
+
+			h2 {
+				font-weight: 900;
+				color: $baseColor_black;
+				font-size: $fontSize_XL-large;
+				font-family: $fontStyle_header;
+			}
+
+			h5 {
+				font-weight: 400;
+				color: $baseColor_black;
+				font-size: $fontSize_xSmall;
+				font-family: $fontStyle_option4;
+			}
+		}
+	}
+
 	// <========== TRENDING NOW ==========>
 	.trendingNow {
 		padding: 2rem;
