--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -279,7 +279,7 @@
 			h2 {
 				font-weight: 900;
 				color: $baseColor_black;
-				font-size: $fontSize_BG-large;
+				font-size: $fontSize_large-1;
 				font-family: $fontStyle_header;
 			}
 
@@ -473,7 +473,7 @@
 				display: flex;
 				justify-content: space-between;
 
-				.additionalInfomation,
+				.additionalInformation,
 				.getHelp,
 				.aboutToddBlue {
 					display: flex;
@@ -503,7 +503,7 @@
 					}
 				}
 
-				.additionalInfomation {
+				.additionalInformation {
 					line-height: 1rem;
 					margin-right: 7rem;
 
