--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,6 +1,7 @@
 // Imports
 @import "./fonts";
 @import "./colors";
+@import "./newPage";
 @import "./boxShadow";
 
 .container {
@@ -451,30 +452,6 @@
 						}
 					}
 				}
-			}
-		}
-	}
-
-	.trendingBrands {
-		padding: 2rem;
-		margin-top: 2.5rem;
-
-		h2 {
-			font-weight: 500;
-			text-align: center;
-			color: $baseColor_black;
-			font-size: $fontSize_large-0;
-			font-family: $fontStyle_header;
-		}
-
-		.imageDisplay {
-			display: grid;
-			grid-template-columns: repeat(6, 1fr);
-			grid-gap: 1rem;
-
-			a:hover {
-				transition: all 0.25s ease-in;
-				opacity: 0.5;
 			}
 		}
 	}
