Creaed a related categories section in the store page. removed and added some images. Edited the styling for the store page and general styling.

--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -18,6 +18,7 @@ $fontStyle_option4: "Inter", sans-serif;
 $fontSize_xSmall: 0.75rem;
 $fontSize_small: 0.9rem;
 $fontSize_normal: 1rem;
+$fontSize_medium: 1.25rem;
 $fontSize_large: 1.5rem;
 $fontSize_large-0: 2rem;
 $fontSize_large-1: 2.5rem;
