Created a product display section in the new releases new.js file. Also edited the styling in both the new and store scss files.

--- a/styles/_storePage.scss
+++ b/styles/_storePage.scss
@@ -14,7 +14,7 @@
 
 		.productDisplay {
 			display: grid;
-			padding: 1rem 0;
+			padding: 1rem 2rem;
 			grid-template-columns: repeat(4, 1fr);
 			grid-row-gap: 4rem;
 			grid-column-gap: 1rem;
