--- a/styles/_newPage.scss
+++ b/styles/_newPage.scss
@@ -1,62 +1,138 @@
 // <========== NEW PAGE WEBSITE SCSS STYLING ==========>
 .main {
-	// <========== TRENDING BRANDS ==========>
-	.trendingBrands {
+	.new {
 		padding: 2rem;
 		margin-top: 2.5rem;
 
 		h2 {
-			font-weight: 500;
-			text-align: center;
+			margin-top: 1rem;
+			font-weight: 400;
 			color: $baseColor_black;
-			font-size: $fontSize_large-0;
-			font-family: $fontStyle_header;
+			font-size: $fontSize_medium;
+			font-family: $fontStyle_option4;
 		}
 
-		.imageDisplay {
-			display: grid;
-			grid-template-columns: repeat(6, 1fr);
-			grid-gap: 1rem;
+		.borderLineMid {
+			margin: 0.1rem 0;
+			border-bottom: $baseColor_lightGrey2 0.1rem solid;
+		}
 
-			a:hover {
-				transition: all 0.25s ease-in;
-				opacity: 0.5;
+		// <========== NEW PRODUCTS ==========>
+		.productDisplay {
+			display: grid;
+			padding: 1rem 2rem;
+			grid-template-columns: repeat(4, 1fr);
+			grid-row-gap: 4rem;
+			grid-column-gap: 1rem;
+			justify-content: space-between;
+
+			.productItem {
+				display: flex;
+				flex-direction: column;
+				justify-content: space-between;
+
+				a {
+					text-decoration: none;
+
+					img {
+						width: 100%;
+						height: 400px;
+						object-fit: contain;
+					}
+				}
+
+				.description {
+					display: flex;
+					padding: 0.5rem 0;
+					flex-direction: column;
+
+					.topSection {
+						display: flex;
+						line-height: 2.5rem;
+						flex-direction: column;
+						justify-content: space-between;
+
+						a,
+						h2 {
+							margin: auto 0;
+							font-weight: 100;
+							text-decoration: none;
+							color: $baseColor_black;
+							font-size: $fontSize_normal;
+							font-family: $fontStyle_option4;
+						}
+					}
+
+					a {
+						margin-top: 0.25rem;
+						font-weight: 100;
+						text-decoration: none;
+						color: $baseColor_lightGrey3;
+						font-size: $fontSize_small;
+						font-family: $fontStyle_option4;
+					}
+				}
 			}
 		}
-	}
 
-	// <========== JOIN COMMUNITY ==========>
-	.joinCommunity {
-		padding: 2rem;
-		display: flex;
-		flex-direction: column;
-		margin-top: 2rem;
-		background-color: $backgroundColor_black;
+		// <========== TRENDING BRANDS ==========>
+		.trendingBrands {
+			padding: 2rem;
+			margin-top: 2.5rem;
 
-		h2 {
-			font-weight: 500;
-			text-align: center;
-			color: $baseColor_white;
-			font-size: $fontSize_large-1;
-			font-family: $fontStyle_header;
-		}
-
-		newButton {
-			margin: 0 auto;
-			margin-top: 1.5rem;
-			padding: 0.25rem 4rem;
-			background-color: $backgroundColor_White;
-
-			a {
+			h2 {
+				font-weight: 500;
 				text-align: center;
 				color: $baseColor_black;
-				font-size: $fontSize_large;
+				font-size: $fontSize_large-0;
 				font-family: $fontStyle_header;
 			}
 
-			a:hover {
-				transition: all 0.25s ease-in;
-				color: $baseColor_lightGrey4;
+			.imageDisplay {
+				display: grid;
+				grid-template-columns: repeat(6, 1fr);
+				grid-gap: 1rem;
+
+				a:hover {
+					transition: all 0.25s ease-in;
+					opacity: 0.5;
+				}
+			}
+		}
+
+		// <========== JOIN COMMUNITY ==========>
+		.joinCommunity {
+			padding: 2rem;
+			display: flex;
+			flex-direction: column;
+			margin-top: 2rem;
+			background-color: $backgroundColor_black;
+
+			h2 {
+				font-weight: 500;
+				text-align: center;
+				color: $baseColor_white;
+				font-size: $fontSize_large-1;
+				font-family: $fontStyle_header;
+			}
+
+			newButton {
+				margin: 0 auto;
+				margin-top: 1.5rem;
+				padding: 0.25rem 4rem;
+				background-color: $backgroundColor_White;
+
+				a {
+					text-align: center;
+					color: $baseColor_black;
+					font-size: $fontSize_large;
+					font-family: $fontStyle_header;
+				}
+
+				a:hover {
+					transition: all 0.25s ease-in;
+					color: $baseColor_lightGrey4;
+				}
 			}
 		}
 	}
