--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -229,7 +229,7 @@
 		.content {
 			display: grid;
 			padding: 1rem 0;
-			grid-template-columns: (repeat(2, 1fr));
+			grid-template-columns: repeat(2, 1fr);
 			grid-gap: 1rem;
 
 			.productDisplay {
@@ -593,6 +593,7 @@
 						}
 					}
 				}
+
 				.rightSide {
 					a:hover {
 						color: $baseColor_white;
@@ -603,9 +604,331 @@
 	}
 }
 
-@media (max-width: 600px) {
-	.grid {
-		width: 100%;
-		flex-direction: column;
+/* Small - Large mobile screen (portrait 576px) // Change to (max-device-width: 320px) when finished */
+@media screen and (max-width: 576px) {
+	.main {
+		//  <========== HEADER ==========>
+		header {
+			padding: 0.5rem 0;
+
+			nav {
+				.topSection {
+					.leftSide,
+					.rightSide {
+						display: none;
+					}
+				}
+
+				.borderLineMid {
+					display: none;
+				}
+
+				.bottomSection {
+					display: flex;
+					align-items: center;
+					justify-content: space-between;
+
+					.navTitle {
+						a,
+						h2 {
+							margin: 0 auto;
+							color: $baseColor_black;
+							font-size: $fontSize_large;
+							font-family: $fontStyle_header;
+						}
+						a:hover,
+						h2:hover {
+							color: $secondary_Purple;
+						}
+					}
+
+					.navLinks {
+						display: none;
+					}
+				}
+			}
+		}
+
+		// <========== HERO ==========>
+		.hero {
+			.title {
+				letter-spacing: 0rem;
+				font-size: 3rem;
+			}
+		}
+
+		// <========== POPULAR ==========>
+		.popular {
+			padding: 0rem 1rem;
+			margin-top: 5rem;
+
+			.productDisplay {
+				grid-template-columns: 1fr;
+			}
+		}
+
+		// <========== COSY SETS ==========>
+		.cosySet {
+			padding: 1rem;
+			margin-top: 1rem;
+
+			.content {
+				grid-template-columns: 1fr;
+				grid-gap: 0rem;
+
+				.productDisplay {
+					.content {
+						bottom: 100px;
+					}
+				}
+			}
+		}
+
+		// <========== TRENDING NOW ==========>
+		.trendingNow {
+			padding: 1rem;
+			margin-top: 2.5rem;
+
+			.productDisplay {
+				grid-template-columns: 1fr;
+			}
+		}
+
+		// <========== MORE BLUE OPTIONS ==========>
+		.moreProducts {
+			padding: 1rem;
+			margin-top: 1rem;
+
+			.contentDisplay {
+				display: grid;
+				padding: 1rem 0;
+				grid-template-columns: repeat(1, 1fr);
+				grid-gap: 1rem;
+			}
+		}
+
+		// <========== PRODUCT LINKS ==========>
+		.productLinks {
+			padding: 1rem;
+			margin-top: 1rem;
+
+			.content {
+				display: grid;
+				padding: 0.75rem;
+				grid-template-columns: (repeat(2, 1fr));
+				grid-gap: 2rem;
+			}
+		}
+	}
+
+	// <========== FOOTER ==========>
+	.footer {
+		padding: 2rem 1rem;
+		margin-top: 1rem;
+
+		.content {
+			.topSection {
+				display: grid;
+				grid-template-columns: 1fr;
+
+				.leftSection {
+					display: grid;
+					grid-template-columns: repeat(2, 1fr);
+					grid-row-gap: 2rem;
+
+					.additionalInformation,
+					.getHelp,
+					.aboutToddBlue {
+						line-height: 1.25rem;
+						margin-right: 0.25rem;
+					}
+
+					.additionalInformation {
+						margin-right: 1rem;
+					}
+				}
+
+				.rightSection {
+					display: flex;
+					margin-top: 2.5rem;
+					align-items: flex-start;
+					justify-content: center;
+
+					a {
+						padding: 10px 20px;
+						font-size: $fontSize_medium;
+					}
+				}
+			}
+
+			.bottomSection {
+				.topHalfSection {
+					display: grid;
+					grid-template-columns: repeat(2, 1fr);
+					justify-content: space-between;
+
+					a {
+						text-align: center;
+					}
+				}
+
+				.bottomHalfSection {
+					margin-top: 2.5rem;
+
+					.leftSide,
+					.rightSide {
+						display: grid;
+						grid-template-columns: 1fr;
+
+						a {
+							padding: 10px 0;
+							text-decoration: none;
+							font-size: $fontSize_xSmall;
+							color: $baseColor_lightGrey4;
+							font-family: $fontStyle_option3;
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+// Devices In-between Mobile and tablets width
+@media screen and (min-width: 577px) and (max-width: 767px) {
+	.main {
+		// <========== PRODUCT LINKS ==========>
+		.productLinks {
+			.content {
+				padding: 0.75rem;
+			}
+		}
+	}
+
+	// <========== FOOTER ==========>
+	.footer {
+		.content {
+			.topSection {
+				display: grid;
+				grid-template-columns: 1fr;
+
+				.leftSection {
+					.additionalInformation,
+					.getHelp,
+					.aboutToddBlue {
+						margin-right: 0.25rem;
+					}
+
+					.additionalInformation {
+						margin-right: 1rem;
+					}
+				}
+
+				.rightSection {
+					display: flex;
+					margin-top: 2.5rem;
+					align-items: flex-start;
+					justify-content: center;
+
+					a {
+						padding: 10px 20px;
+						font-size: $fontSize_medium;
+					}
+				}
+			}
+
+			.bottomSection {
+				.topHalfSection {
+					display: flex;
+					justify-content: center;
+				}
+
+				.bottomHalfSection {
+					margin-top: 1rem;
+
+					.leftSide,
+					.rightSide {
+						display: grid;
+						grid-template-columns: 1fr;
+
+						a {
+							padding: 10px 0;
+							text-decoration: none;
+							font-size: $fontSize_xSmall;
+							color: $baseColor_lightGrey4;
+							font-family: $fontStyle_option3;
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+/* Tablet screen (portrait 768px - 1023px) // Change to (max-device-width: 768px) when finished */
+@media screen and (min-width: 768px) and (max-width: 992px) {
+	.main {
+		// <========== COSY SETS ==========>
+		.cosySet {
+			.content {
+				.productDisplay {
+					.content {
+						bottom: 120px;
+					}
+				}
+			}
+		}
+
+		// <========== PRODUCT LINKS ==========>
+		.productLinks {
+			.content {
+				padding: 1rem 2.5rem;
+			}
+		}
+
+		.new {
+			padding: 1rem;
+			margin-top: 1rem;
+
+			// <========== NEW PRODUCTS ==========>
+			.productDisplay {
+				display: grid;
+				padding: 1rem 0.75rem;
+				grid-template-columns: repeat(3, 1fr);
+				grid-row-gap: 4rem;
+				grid-column-gap: 1rem;
+				justify-content: space-between;
+			}
+		}
+	}
+
+	// <========== FOOTER ==========>
+	.footer {
+		.content {
+			.topSection {
+				.leftSection {
+					.additionalInformation,
+					.getHelp,
+					.aboutToddBlue {
+						margin-right: 0.5rem;
+					}
+
+					.additionalInformation {
+						margin-right: 3rem;
+					}
+				}
+			}
+
+			.bottomSection {
+				.topHalfSection {
+					display: flex;
+					justify-content: center;
+				}
+
+				.bottomHalfSection {
+					margin-top: 1rem;
+				}
+			}
+		}
 	}
 }
