--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -719,6 +719,37 @@
 				grid-gap: 2rem;
 			}
 		}
+
+		// <========== NEW PAGE WEBSITE SCSS STYLING ==========>
+		.new {
+			padding: 1rem;
+			margin-top: 1rem;
+
+			// <========== NEW PRODUCTS ==========>
+			.productDisplay {
+				display: grid;
+				padding: 0.25rem;
+				grid-template-columns: repeat(1, 1fr);
+				grid-row-gap: 1.5rem;
+			}
+
+			// <========== TRENDING BRANDS ==========>
+			.trendingBrands {
+				padding: 1rem;
+				margin-top: 1.5rem;
+
+				.imageDisplay {
+					display: grid;
+					grid-template-columns: repeat(3, 1fr);
+					grid-gap: 1rem;
+
+					a:hover {
+						transition: all 0.25s ease-in;
+						opacity: 0.5;
+					}
+				}
+			}
+		}
 	}
 
 	// <========== FOOTER ==========>
@@ -801,6 +832,28 @@
 		.productLinks {
 			.content {
 				padding: 0.75rem;
+			}
+		}
+
+		// <========== NEW PAGE WEBSITE SCSS STYLING ==========>
+		.new {
+			padding: 1rem;
+			margin-top: 1rem;
+
+			// <========== NEW PRODUCTS ==========>
+			.productDisplay {
+				display: grid;
+				padding: 1rem 0.75rem;
+				grid-template-columns: repeat(2, 1fr);
+				grid-row-gap: 4rem;
+				grid-column-gap: 1rem;
+				justify-content: space-between;
+			}
+
+			// <========== TRENDING BRANDS ==========>
+			.trendingBrands {
+				padding: 1rem;
+				margin-top: 1.5rem;
 			}
 		}
 	}
@@ -886,6 +939,7 @@
 			}
 		}
 
+		// <========== NEW PAGE WEBSITE SCSS STYLING ==========>
 		.new {
 			padding: 1rem;
 			margin-top: 1rem;
