--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -750,6 +750,36 @@
 				}
 			}
 		}
+
+		// <========== STORE PAGE WEBSITE SCSS STYLING ==========>
+		.store {
+			padding: 1rem;
+			margin-top: 1rem;
+
+			.productDisplay {
+				display: grid;
+				padding: 0.25rem;
+				grid-template-columns: repeat(1, 1fr);
+				grid-row-gap: 1.5rem;
+			}
+
+			.bottomContent {
+				padding: 0 0.25rem;
+				margin-top: 2.5rem;
+
+				.relatedStories {
+					margin-top: 3rem;
+
+					.content {
+						display: grid;
+						padding: 1rem 0;
+						margin-top: 1rem;
+						grid-template-columns: repeat(1, 1fr);
+						grid-gap: 1rem;
+					}
+				}
+			}
+		}
 	}
 
 	// <========== FOOTER ==========>
@@ -856,6 +886,21 @@
 				margin-top: 1.5rem;
 			}
 		}
+
+		// <========== STORE PAGE WEBSITE SCSS STYLING ==========>
+		.store {
+			padding: 1rem;
+			margin-top: 1rem;
+
+			.productDisplay {
+				display: grid;
+				padding: 1rem 0.75rem;
+				grid-template-columns: repeat(2, 1fr);
+				grid-row-gap: 4rem;
+				grid-column-gap: 1rem;
+				justify-content: space-between;
+			}
+		}
 	}
 
 	// <========== FOOTER ==========>
@@ -945,6 +990,21 @@
 			margin-top: 1rem;
 
 			// <========== NEW PRODUCTS ==========>
+			.productDisplay {
+				display: grid;
+				padding: 1rem 0.75rem;
+				grid-template-columns: repeat(3, 1fr);
+				grid-row-gap: 4rem;
+				grid-column-gap: 1rem;
+				justify-content: space-between;
+			}
+		}
+
+		// <========== STORE PAGE WEBSITE SCSS STYLING ==========>
+		.store {
+			padding: 1rem;
+			margin-top: 1rem;
+
 			.productDisplay {
 				display: grid;
 				padding: 1rem 0.75rem;
