--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -900,6 +900,23 @@
 				grid-column-gap: 1rem;
 				justify-content: space-between;
 			}
+
+			.bottomContent {
+				padding: 0 0.25rem;
+				margin-top: 2.5rem;
+
+				.relatedStories {
+					margin-top: 3rem;
+
+					.content {
+						display: grid;
+						padding: 1rem 0;
+						margin-top: 1rem;
+						grid-template-columns: repeat(2, 1fr);
+						grid-gap: 1rem;
+					}
+				}
+			}
 		}
 	}
 
