--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -460,7 +460,8 @@
 }
 
 // <========== FOOTER ==========>
-.footer {
+.footer,
+.footerLight {
 	padding: 2rem;
 	background-color: $backgroundColor_black;
 
@@ -606,35 +607,16 @@
 }
 
 .footerLight {
-	padding: 2rem;
 	background-color: $backgroundColor_White;
 
 	.content {
-		margin: 0 auto;
-		max-width: 1800px;
-
 		.topSection {
-			display: flex;
-			justify-content: space-between;
-
 			.leftSection {
-				display: flex;
-				justify-content: space-between;
-
 				.additionalInformation,
 				.getHelp,
 				.aboutToddBlue {
-					display: flex;
-					margin-right: 2rem;
-					line-height: 0.75rem;
-					flex-direction: column;
-
 					a {
-						padding: 10px;
-						text-decoration: none;
-						font-size: $fontSize_small;
 						color: $baseColor_black;
-						font-family: $fontStyle_option3;
 					}
 
 					a:hover {
@@ -642,12 +624,7 @@
 					}
 
 					.titleSection {
-						margin-bottom: 0.25rem;
-						letter-spacing: 0.04rem;
 						color: $baseColor_black;
-						text-transform: uppercase;
-						font-size: $fontSize_normal;
-						font-family: $fontStyle_header;
 					}
 
 					.titleSection:hover {
@@ -656,17 +633,8 @@
 				}
 
 				.additionalInformation {
-					line-height: 1rem;
-					margin-right: 7rem;
-
 					a {
-						padding: 10px;
-						letter-spacing: 0.04rem;
-						text-decoration: none;
 						color: $baseColor_black;
-						text-transform: uppercase;
-						font-size: $fontSize_normal;
-						font-family: $fontStyle_header;
 					}
 
 					a:hover {
@@ -676,16 +644,8 @@
 			}
 
 			.rightSection {
-				display: flex;
-				align-items: flex-start;
-				justify-content: right;
-
 				a {
-					padding: 10px;
-					text-decoration: none;
-					font-size: $fontSize_normal;
 					color: $baseColor_black;
-					font-family: $fontStyle_option3;
 				}
 
 				a:hover {
@@ -695,21 +655,13 @@
 		}
 
 		.borderLineMid {
-			margin: 1rem 0;
 			border-bottom: $backgroundColor_black 0.1rem solid;
 		}
 
 		.bottomSection {
 			.topHalfSection {
-				display: flex;
-				justify-content: right;
-
 				a {
-					padding: 10px;
-					text-decoration: none;
-					font-size: $fontSize_xSmall;
 					color: $baseColor_black;
-					font-family: $fontStyle_option3;
 				}
 
 				a:hover {
@@ -718,29 +670,16 @@
 			}
 
 			.bottomHalfSection {
-				display: flex;
-				justify-content: space-between;
-
 				.leftSide,
 				.rightSide {
-					display: flex;
-
 					a {
-						padding: 10px;
-						text-decoration: none;
-						font-size: $fontSize_xSmall;
 						color: $baseColor_black;
-						font-family: $fontStyle_option3;
 					}
 				}
 
 				.leftSide {
 					.location {
 						color: $secondary_Purple;
-
-						i {
-							margin-right: 1rem;
-						}
 					}
 				}
 
