Updated scss styling file structure for the newjs and storejs pages.

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,8 +1,8 @@
 // Imports
 @import "./fonts";
 @import "./colors";
-@import "./newPage";
-@import "./storePage";
+@import "./pages/newPage";
+@import "./pages/storePage";
 @import "./boxShadow";
 
 .container {
