Added content in the Brand.js page. Edited the li tage to next.js links tag and edited other tags in the home page.

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,6 +1,7 @@
 // Imports
 @import "./fonts";
 @import "./colors";
+@import "./pages/BrandPage";
 @import "./pages/newPage";
 @import "./pages/storePage";
 @import "./boxShadow";
