--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -5,6 +5,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Assistant:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Sarabun:wght@200&display=swap");
 
 // Font Stack Properties
 $fontStyle_header: "Bebas Neue", cursive;
@@ -13,6 +16,9 @@ $fontStyle_option1: "Heebo", cursive;
 $fontStyle_option2: "Fjalla One", sans-serif;
 $fontStyle_option3: "Assistant", sans-serif;
 $fontStyle_option4: "Inter", sans-serif;
+$fontStyle_option5: "Sarabun", sans-serif;
+$fontStyle_option6: "Open Sans", sans-serif;
+$fontStyle_option7: "Lora", sans-serif;
 
 // Font Sizes
 $fontSize_xSmall: 0.75rem;
@@ -22,9 +28,10 @@ $fontSize_medium: 1.25rem;
 $fontSize_large: 1.5rem;
 $fontSize_large-0: 2rem;
 $fontSize_large-1: 2.5rem;
-$fontSize_XL-large: 5rem;
-$fontSize_BG-large: 12rem;
-$fontSize_darkModeBtn: 1.25rem;
+$fontSize_large-2: 3rem;
+$fontSize_XL-large: 4rem;
+$fontSize_XL-large-0: 4.5rem;
+$fontSize_XL-large-1: 5rem;
 
 /* about-me background circle height & width */
 $aboutMECircle: 60rem;
