--- a/styles/pages/_BrandPage.scss
+++ b/styles/pages/_BrandPage.scss
@@ -2,6 +2,7 @@
 .backgroundImageTop {
 	height: 30rem;
 	display: flex;
+	margin: 2.5rem 0;
 	align-items: center;
 	background: url("/otherImages/nike-just-do-it Liverpool.jpg");
 	background-size: cover;
@@ -28,6 +29,116 @@
 				color: $baseColor_white;
 				font-size: $fontSize_large;
 				font-family: $fontStyle_option5;
+			}
+		}
+	}
+}
+
+.whoWeAre {
+	padding: 2.5rem;
+
+	.content {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		grid-column-gap: 1rem;
+		justify-content: space-between;
+
+		.leftSide {
+			margin: auto 0;
+			padding: 1rem;
+
+			.title {
+				h5 {
+					font-weight: 600;
+					color: $baseColor_black;
+					font-size: $fontSize_medium;
+					font-family: $fontStyle_option5;
+				}
+			}
+
+			.description {
+				margin-top: 2.5rem;
+				p {
+					color: $baseColor_black;
+					font-size: $fontSize_small;
+					font-family: $fontStyle_option4;
+				}
+			}
+		}
+
+		.rightSide {
+			margin: auto 0;
+
+			a {
+				text-decoration: none;
+			}
+		}
+	}
+}
+
+.JoinUS {
+	padding: 2.5rem;
+
+	.content {
+		display: flex;
+		flex-direction: column;
+		grid-row-gap: 2rem;
+		justify-content: space-between;
+
+		h5 {
+			font-weight: 600;
+			color: $baseColor_black;
+			font-size: $fontSize_large;
+			font-family: $fontStyle_option5;
+		}
+
+		.TopSide {
+			margin: auto 0;
+
+			a {
+				text-decoration: none;
+			}
+		}
+
+		.BottomSide {
+			margin: auto 0;
+			padding: 1rem;
+
+			.title {
+				text-align: center;
+
+				h5 {
+					font-weight: 600;
+					color: $baseColor_black;
+					font-size: $fontSize_medium;
+					font-family: $fontStyle_option5;
+				}
+			}
+
+			.description {
+				margin: 2.5rem 0;
+
+				p {
+					color: $baseColor_black;
+					font-size: $fontSize_small;
+					font-family: $fontStyle_option4;
+				}
+			}
+
+			newButton {
+				padding: 0.75rem 1.75rem;
+				border-radius: 15px;
+				background-color: $backgroundColor_black;
+
+				a {
+					color: $baseColor_white;
+					font-size: $fontSize_small;
+					font-family: $fontStyle_option4;
+				}
+
+				a:hover {
+					color: $baseColor_lightGrey2;
+				}
 			}
 		}
 	}
