--- a/styles/pages/_BrandPage.scss
+++ b/styles/pages/_BrandPage.scss
@@ -34,6 +34,7 @@
 	}
 }
 
+// <========== WHO WE ARE ==========>
 .whoWeAre {
 	padding: 2.5rem;
 
@@ -76,6 +77,7 @@
 	}
 }
 
+// <========== JOIN US ==========>
 .JoinUS {
 	padding: 2.5rem;
 
