Edited the website scrollbar scss styling.

--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -13,6 +13,7 @@ $backgroundColor_black: #111;
 $backgroundColor_lightBlack: #292929;
 
 // Main Colours
+$secondary_blue: #296af8;
 $secondary_yellow: #fbcf40;
 $secondary_orange: #fbb040;
 $secondary_Purple: #8a59fd;
