Edited the scss styling for the new.js page product infomation display section. And also edited the scss styling for the shoe.js page as well. Lastly, edited and added new content and features to the new.js product page.

--- a/styles/pages/_storePage.scss
+++ b/styles/pages/_storePage.scss
@@ -37,7 +37,7 @@
 
 				.description {
 					display: flex;
-					padding: 0.5rem 0.25;
+					padding: 0.5rem 0.25rem;
 					flex-direction: column;
 
 					.topSection {
