--- a/styles/pages/_newPage.scss
+++ b/styles/pages/_newPage.scss
@@ -8,7 +8,7 @@
 			margin-top: 1rem;
 			font-weight: 400;
 			color: $baseColor_black;
-			font-size: $fontSize_medium;
+			font-size: $fontSize_normal;
 			font-family: $fontStyle_option4;
 		}
 
@@ -48,6 +48,7 @@
 
 					.topSection {
 						display: flex;
+						margin-top: 1rem;
 						line-height: 2.5rem;
 						flex-direction: column;
 						justify-content: space-between;
@@ -56,10 +57,17 @@
 						h2 {
 							margin: auto 0;
 							font-weight: 100;
+							line-height: 1.15rem;
 							text-decoration: none;
 							color: $baseColor_black;
-							font-size: $fontSize_normal;
+							font-size: $fontSize_small;
 							font-family: $fontStyle_option4;
+						}
+
+						h2 {
+							font-weight: 600;
+							margin-top: 0.5rem;
+							font-size: $fontSize_xSmall;
 						}
 					}
 
@@ -68,8 +76,20 @@
 						font-weight: 100;
 						text-decoration: none;
 						color: $baseColor_lightGrey3;
-						font-size: $fontSize_small;
+						font-size: $fontSize_xSmall;
 						font-family: $fontStyle_option4;
+					}
+
+					.bottomSection {
+						display: flex;
+						justify-content: space-between;
+
+						newButton {
+							margin: auto 0;
+							margin-right: 0.25rem;
+							color: $baseColor_black;
+							font-size: $fontSize_normal;
+						}
 					}
 				}
 			}
