--- a/styles/pages/_BrandPage.scss
+++ b/styles/pages/_BrandPage.scss
@@ -4,7 +4,7 @@
 	display: flex;
 	margin: 2.5rem 0;
 	align-items: center;
-	background: url("/otherImages/nike-just-do-it Liverpool.jpg");
+	background: url("/otherImages/six.png");
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
