Added new product images and created products information in the accessories.json file to populate the accessories product display section in the accessories.js page.

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -158,7 +158,7 @@
 		h2 {
 			font-weight: 400;
 			color: $baseColor_black;
-			font-size: $fontSize_large;
+			font-size: $fontSize_medium;
 			font-family: $fontStyle_option4;
 		}
 
@@ -230,7 +230,7 @@
 		h2 {
 			font-weight: 400;
 			color: $baseColor_black;
-			font-size: $fontSize_large;
+			font-size: $fontSize_medium;
 			font-family: $fontStyle_option4;
 		}
 
@@ -285,7 +285,7 @@
 		h2 {
 			font-weight: 400;
 			color: $baseColor_black;
-			font-size: $fontSize_large;
+			font-size: $fontSize_medium;
 			font-family: $fontStyle_option4;
 		}
 
@@ -357,7 +357,7 @@
 		h2 {
 			font-weight: 400;
 			color: $baseColor_black;
-			font-size: $fontSize_large;
+			font-size: $fontSize_medium;
 			font-family: $fontStyle_option4;
 		}
 
@@ -429,12 +429,12 @@
 
 					li {
 						list-style: none;
-						line-height: 2.25rem;
+						line-height: 2rem;
 
 						a {
 							text-decoration: none;
 							color: $baseColor_lightGrey3;
-							font-size: $fontSize_normal;
+							font-size: $fontSize_small;
 							font-family: $fontStyle_option4;
 						}
 
