Populated the one time customs page with default content and edited the general scss styling variables.

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -100,6 +100,14 @@
 				a:hover {
 					color: $baseColor_lightGrey3;
 				}
+
+				.OneTime {
+					color: $secondary_blue;
+				}
+
+				.OneTime:hover {
+					color: $secondary_pinkRed;
+				}
 			}
 
 			.navCheckout {
