--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -13,9 +13,9 @@ $backgroundColor_black: #111;
 $backgroundColor_lightBlack: #292929;
 
 // Main Colours
-$secondary_blue: #296af8;
+$secondary_blue: #5271ff;
 $secondary_yellow: #fbcf40;
-$secondary_orange: #fbb040;
+$secondary_orange: #f8361b;
 $secondary_Purple: #8a59fd;
 $secondary_pinkRed: #ff0055;
 $secondary_fadedPink: #ff8fb4;
